# NetworkMonitor

./: .coverage  .gitignore  CLAUDE.md  NEXT_STEPS.md  README.md  SECURITY_AUDIT.md  SO_FAR.md  STARTUP.md  TESTING.md  TODOS.md  com.netmonitor.plist  config.yaml  main.py  network-monitor-spec.md  pyproject.toml  schema.sql  secrets_template.json
assets/: custom.css
docs/: SO_FAR.md  menubar_usage.md  network-monitor-agentic-guide.md
extension/: README.md  background.js  manifest.json
extension/icons/: README.md
launchagent/: README.md  com.networkmonitor.daemon.plist  install.sh  uninstall.sh
scripts/: install_launchagent.sh  run_menubar.py  uninstall_launchagent.sh
src/: capture.py  config_manager.py  daemon.py  dash_app.py  db_queries.py  logging_config.py  menubar.py  models.py  process_mapper.py  retention.py  utils.py  webserver.py
src/api/: applications.py  browser.py  config.py  domains.py  historical.py  stats.py
src/dashboard/: __init__.py  app_instance.py  callbacks.py  components.py  layouts.py  styles.py
tests/: conftest.py  fixtures.py  test_api.py  test_daemon.py  test_dashboard.py  test_database.py  test_extension.py  test_integration.py  test_main.py  test_menubar.py  test_process_mapper.py
