[project]
name = "network-monitor"
version = "0.1.0"
description = "A lightweight, privacy-focused network monitoring tool for macOS that tracks application-level network usage with enhanced domain-level tracking for web browsers"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "plotly>=5.17.0",
    "dash>=2.14.0",
    "scapy>=2.5.0",
    "rumps>=0.4.0",
    "pydantic>=2.5.0",
    "aiosqlite>=0.19.0",
    "python-multipart>=0.0.6",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.25.0",
    "pytest-cov>=4.1.0",
    "dash-bootstrap-components>=2.0.4",
]

[project.scripts]
network-monitor = "main:main"
